Régression Page publique

--- a/src/app/modules/public/news.html
+++ b/src/app/modules/public/news.html
@@ -1,7 +1,7 @@
 <div class="container fb-page">
     <h2 class="center-align accent-text-color" translate="navbar.news"></h2>
-    <div class="card center-align">
-        <div class="fb-page" data-href="https://www.facebook.com/qaobee" data-small-header="true" data-width="1000"
+    <div class="row center">
+        <div class="fb-page s12" data-href="https://www.facebook.com/qaobee" data-small-header="true" data-width="1000"
              data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"
              data-show-posts="true"></div>
     </div>
