--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -1,40 +1,31 @@
-<div class="home container" id="progress">
-    <ul class="collapsible popout" data-collapsible="accordion" watch>
-        <li>
-            <div class="collapsible-header light-primary-color">
-                <div class="row">
-                    <div class="col m2 s12 icon-conceptH">
-                        <i class="fa fa-bar-chart fa-fw fa-4x white-text"></i>
-                    </div>
-                    <div class="col m10 s12 left-align">
-                        <h3 translate="landing.concept.analyze"
-                            class="hide-on-small-only primary-text-color"></h3>
-                        <h5 translate="landing.concept.analyze"
-                            class="hide-on-med-and-up primary-text-color"></h5>
-                        <h5 translate="pricing.offers.standard.statsMob.title"></h5>
-                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
-                               class="right accent-text-color"></a></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="collapsible-body default-primary-color">
-                <div class="row">
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-bullseye fa-fw"></i>
-                            <span translate="pricing.offers.standard.appWeb.title"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.appWeb.intro"></p>
-                    </div>
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-pie-chart fa-fw"></i>
-                            <span translate="pricing.offers.standard.statsWeb.title"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.statsWeb.detail"></p>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul>
+<div class="container" id="progress">
+    <div class="row">
+        <div class="col m2 s12 icon-conceptH">
+            <i class="fa fa-bar-chart fa-fw fa-4x white-text"></i>
+        </div>
+        <div class="col m10 s12 left-align">
+            <h4 translate="landing.concept.analyze"
+                class="hide-on-small-only accent-text-color"></h4>
+            <h5 translate="landing.concept.analyze"
+                class="hide-on-med-and-up accent-text-color"></h5>
+            <h5 translate="landing.detail.offers.standard.statsMob.title"></h5>
+            
+        </div>
+    </div>
+    <div class="row primary-text-color">
+        <div class="col s12 m6">
+            <h5><i class="fa fa-bullseye fa-fw"></i>
+                <span translate="landing.detail.offers.standard.appWeb.title"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.appWeb.intro"></p>
+        </div>
+        <div class="col s12 m6">
+            <h5><i class="fa fa-pie-chart fa-fw"></i>
+                <span translate="landing.detail.offers.standard.statsWeb.title"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.statsWeb.detail"></p>
+        </div>
+    </div>
     <div class="container laptop hide-on-med-and-down">
         <div class="upper white-text">
             <slide-wrapper arrows="false">
