--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -1,44 +1,35 @@
-<div class="home container" id="collaborate">
-    <ul class="collapsible popout" data-collapsible="accordion" watch>
-        <li>
-            <div class="collapsible-header light-primary-color">
-                <div class="row">
-                    <div class="col m2 s12 icon-conceptH">
-                        <i class="fa fa-flag fa-fw fa-4x white-text"></i>
-                    </div>
-                    <div class="col m10 s12 left-align">
-                        <h3 translate="pricing.offers.standard.shareWeb.title" class="hide-on-small-only"></h3>
-                        <h5 translate="pricing.offers.standard.shareWeb.title" class="hide-on-med-and-up"></h5>
-                        <h5 translate="pricing.offers.standard.shareWeb.intro"></h5>
-                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
-                               class="right accent-text-color"></a></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="collapsible-body default-primary-color">
-                <div class="row">
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-share-alt fa-fw"></i>
-                            <span translate="pricing.offers.standard.shareWeb.item1Title"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.shareWeb.item1Detail"></p>
-                    </div>
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-area-chart fa-fw"></i>
-                            <span translate="pricing.offers.standard.teamWeb.title"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.teamWeb.detail"></p>
-                    </div>
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-users fa-fw"></i>
-                            <span translate="pricing.offers.standard.shareWeb.item2Title"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.shareWeb.item2Detail"></p>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul>
+<div class="container" id="collaborate">
+    <div class="row">
+        <div class="col m2 s12 icon-conceptH">
+            <i class="fa fa-flag fa-fw fa-4x white-text"></i>
+        </div>
+        <div class="col m10 s12 left-align">
+            <h4 translate="landing.detail.offers.standard.shareWeb.title" class="hide-on-small-only accent-text-color"></h4>
+            <h5 translate="landing.detail.offers.standard.shareWeb.title" class="hide-on-med-and-up accent-text-color"></h5>
+            <h5 translate="landing.detail.offers.standard.shareWeb.intro"></h5>
+        </div>
+    </div>
+    <div class="row primary-text-color">
+        <div class="col s12 m6">
+            <h5><i class="fa fa-share-alt fa-fw"></i>
+                <span translate="landing.detail.offers.standard.shareWeb.item1Title"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.shareWeb.item1Detail"></p>
+        </div>
+        <div class="col s12 m6">
+            <h5><i class="fa fa-area-chart fa-fw"></i>
+                <span translate="landing.detail.offers.standard.teamWeb.title"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.teamWeb.detail"></p>
+        </div>
+        <div class="col s12 m6">
+            <h5><i class="fa fa-users fa-fw"></i>
+                <span translate="landing.detail.offers.standard.shareWeb.item2Title"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.shareWeb.item2Detail"></p>
+        </div>
+    </div>
+           
     <div class="container laptop hide-on-med-and-down">
         <div class="upper white-text">
             <slide-wrapper arrows="false">
