--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,63 +1,54 @@
-<div class="home container" id="collect">
-    <ul class="collapsible popout" data-collapsible="accordion" watch>
-        <li>
-            <div class="collapsible-header light-primary-color">
-                <div class="row">
-                    <div class="col m2 s12 icon-conceptH">
-                        <i class="fa fa-eye fa-fw fa-4x white-text"></i>
-                    </div>
-                    <div class="col m10 s12 left">
-                        <h3 translate="landing.concept.capture"
-                            class="hide-on-small-only primary-text-color"></h3>
-                        <h5 translate="landing.concept.capture"
-                            class="hide-on-med-and-up primary-text-color"></h5>
-                        <h5 translate="pricing.offers.standard.collectMob.title"></h5>
-                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
-                               class="right accent-text-color"></a></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="collapsible-body default-primary-color">
-                <div class="row">
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-bullseye fa-fw"></i>
-                            <span translate="pricing.offers.standard.collectMob.detail.shootTitle"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.collectMob.detail.shoot"></p>
-                    </div>
+<div class="container" id="collect">
+    <div class="row">
+        <div class="col s12 m2 icon-conceptH">
+            <i class="fa fa-eye fa-fw fa-4x white-text"></i>
+        </div>
+        <div class="col s12 m10">
+            <h4 translate="landing.concept.capture"
+                class="hide-on-small-only accent-text-color"></h4>
+            <h5 translate="landing.concept.capture"
+                class="hide-on-med-and-up accent-text-color"></h5>
+            <h5 translate="landing.detail.offers.standard.collectMob.title"></h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m6 primary-text-colo">
+            <h5><i class="fa fa-bullseye fa-fw"></i>
+                <span translate="landing.detail.offers.standard.collectMob.detail.shootTitle"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.collectMob.detail.shoot"></p>
+        </div>
 
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-area-chart fa-fw"></i>
-                            <span translate="pricing.offers.standard.collectMob.detail.attackTitle"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.collectMob.detail.attack"></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-pie-chart fa-fw"></i>
-                            <span translate="pricing.offers.standard.collectMob.detail.defenseTitle"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.collectMob.detail.defense"></p>
-                    </div>
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-bolt fa-fw"></i>
-                            <span translate="pricing.offers.standard.collectMob.detail.disciplineTitle"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.collectMob.detail.discipline"></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s12 m6">
-                        <h5><i class="fa fa-clock-o fa-fw"></i>
-                            <span translate="pricing.offers.standard.collectMob.detail.statusTitle"></span>
-                        </h5>
-                        <p translate="pricing.offers.standard.collectMob.detail.status"></p>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul>
+        <div class="col s12 m6">
+            <h5><i class="fa fa-area-chart fa-fw"></i>
+                <span translate="landing.detail.offers.standard.collectMob.detail.attackTitle"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.collectMob.detail.attack"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m6">
+            <h5><i class="fa fa-pie-chart fa-fw"></i>
+                <span translate="landing.detail.offers.standard.collectMob.detail.defenseTitle"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.collectMob.detail.defense"></p>
+        </div>
+        <div class="col s12 m6">
+            <h5><i class="fa fa-bolt fa-fw"></i>
+                <span translate="landing.detail.offers.standard.collectMob.detail.disciplineTitle"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.collectMob.detail.discipline"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m6">
+            <h5><i class="fa fa-clock-o fa-fw"></i>
+                <span translate="landing.detail.offers.standard.collectMob.detail.statusTitle"></span>
+            </h5>
+            <p translate="landing.detail.offers.standard.collectMob.detail.status"></p>
+        </div>
+    </div>
+            
     <div class="outerdevice hide-on-small-only">
         <div class="device">
             <slide-wrapper arrows="false">
