--- a/src/app/modules/commons/users/billing/pay.html
+++ b/src/app/modules/commons/users/billing/pay.html
@@ -7,10 +7,11 @@
     <title-page-bar icon="verified_user" title="billingPage.label.pay.title" display-back="{{true}}"></title-page-bar>
     <h4 class="center">{{'billingPage.label.pay.content' | translate}} <b>{{plan.levelPlan}}</b></h4>
     <h2 ng-if="message">{{message}}</h2>
+
     <div class="row" ng-if="!paid">
         <div class="col s12 l6 offset-l3">
-            <form stripe-form="handleStripe" name="stripeForm" class="card-form">
-                <div class="credit-card" ng-class="stripeForm.number.$card.type">
+            <form stripe-form="handleStripe" name="stripeForm" class="card-form2">
+                <div class="credit-card2" ng-class="stripeForm.number.$card.type">
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="prefix fa fa-fw fa-credit-card"></i>
@@ -42,17 +43,27 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col s12">
+                        <div class="pull-right">
+                            <input type="checkbox" id="cgv" required="true" ng-model="cgv"/>
+                            <label for="cgv">Accèpter les <a href="#/legal-agreement" target="_blank">conditions de service</a>
+                                et la <a href="#/privacy-policy" target="_blank">politique de confidentialité</a></label>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <a class="btn waves-effect waves-white light-primary-color pull-left"
                            href="#/private/billing/" translate="commons.buttons.cancel">
                         </a>
-                        <button ng-if='paid==false' type="submit"
+                        <button ng-if='paid === false' type="submit"
                                 class="btn waves-effect waves-white secondary-color pull-right"
-                                ng-disabled="stripeForm.$invalid">
-                            <div class="progress" ng-if="inProgress">
-                                <div class="indeterminate"></div>
-                            </div>
+                                ng-disabled="stripeForm.$invalid || !cgv">
+                            <span class="progress" ng-if="inProgress">
+                                <span class="indeterminate"></span>
+                            </span>
                             {{'billingPage.label.pay.pay' | translate}} {{plan.amountPaid}} €
                         </button>
                     </div>
