--- a/src/app/modules/commons/users/signup/signupUser.html
+++ b/src/app/modules/commons/users/signup/signupUser.html
@@ -110,12 +110,7 @@
             </div>
             <div class="col s6 m5">
                 <input type="checkbox" id="cgv" required="true" ng-model="cgv"/>
-                <label for="cgv">Accèpter les <a href="#/legal-agreement" target="_blank">conditions
-                de
-                service</a>
-                    et la <a href="#/privacy-policy" target="_blank">politique
-                    de
-                    confidentialité</a></label>
+                <label for="cgv" translate="commons.legals.gcu"></label>
             </div>
             <div class="col m1 hide-on-small-only">&nbsp;</div>
         </div>
