--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -32,11 +32,11 @@
                         </div>
                     </h6>
                 </div>
-
+                <!--ng-click="pay($index)"-->
                 <div ng-if="plan.status === 'open' || plan.status === 'canceled'" class="col m8 center-align">
-                    <a ng-click="pay($index)"
+                    <button ng-click="pay($index)"
                             class="btn waves-effect waves-white secondary-color pull-right"
-                            translate="billingPage.label.pay.title"></a>
+                            translate="billingPage.label.pay.title"></button>
                 </div>
                 <div ng-if="plan.status !== 'canceled' && plan.status !== 'open'">
                     <div class="col m1 center-align"><span
@@ -77,9 +77,9 @@
                     </div>
                 </h6>
                 <div ng-if="plan.status === 'open' || plan.status === 'canceled'" class="col s12">
-                    <a href="#/private/billing/pay/{{$index}}" class="btn waves-effect waves-white secondary-color"
-                       translate="billingPage.label.pay">
-                    </a>
+                    <button ng-click="pay($index)"
+                            class="btn waves-effect waves-white secondary-color"
+                            translate="billingPage.label.pay.title"></button>
                 </div>
                 <span ng-if="plan.status !== 'open' && plan.status !== 'canceled'">
                         <div class="col s2 center-align"><span ng-bind="plan.amountPaid"></span> €</div>
@@ -87,7 +87,7 @@
                     <div>
                         <span ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4" class="col s6 center-align"></span>
                         <button ng-click="unsubscribe($index)"
-                            class="btn waves-effect waves-white secondary-color pull-right">
+                                class="btn waves-effect waves-white secondary-color pull-right">
                             <div class="progress" ng-if="inProgress">
                                 <div class="indeterminate"></div>
                             </div>
@@ -111,6 +111,7 @@
     <div class="modal-footer">
         <button class="modal-action modal-close waves-effect waves-white btn dark-primary-color"
                 translate="commons.buttons.cancel"></button>
-        <button class="modal-action modal-close btn waves-effect waves-white accent-color" ng-click="agree()" translate="commons.buttons.validate"></button>
+        <button class="modal-action modal-close btn waves-effect waves-white accent-color" ng-click="agree()"
+                translate="commons.buttons.validate"></button>
     </div>
 </div>
