QHBWEB-245 : Gestion du paiement annuel

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1958,3 +1958,9 @@ span#top {
     -o-transition: opacity 0.1s ease-out;
     transition: opacity 0.1s ease-out;
 }
+
+
+.billing-switch label span {
+    color: #000;
+    font-weight: bold;
+}
