--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -20,7 +20,7 @@
                 <span class="light-text-color activator">{{'pricing.offers.' + plan + '.desc' | translate}}
                     <i class="material-icons right">help</i></span>
                 <h4><b>{{p.price}} €</b><span translate="pricing.monthly"></span></h4>
-                <!--<h5 class="right"><b>{{p.price_y}} €</b><span translate="pricing.yearly"></span></h5>-->
+                <h5 class="right"><b>{{p.price_y}} €</b><span translate="pricing.yearly"></span></h5>
             </div>
             <div class="card-reveal center-align">
                 <span class="card-title" ng-class="getPlanView(plan).color">
